@@ -590,5 +590,10 @@ Fri May 21 18:13:44 CEST 1999
 Sun May 23 11:19:32 CEST 1999
 
 	- Add braces around each statement so that a simple if/else works.
+
+Thu Jun 10 21:09:12 CEST 1999
+
+	- Fixed typo in preproc.y.
+	- Synced pgc.l with scan.l.
 	- Set library version to 3.0.0
 	- Set ecpg version to 2.6.0
